--- a/content/publication/bennett-2013-testing/bennett-2013-testing.bib
+++ b/content/publication/bennett-2013-testing/bennett-2013-testing.bib
@@ -1,4 +1,4 @@
-@phdthesis{bennett2013testing,
+@mastersthesis{bennett2013testing,
  author = {Bennett, Dominic J},
  school = {Department of Life Sciences, Silwood Park, Imperial College London},
  title = {Testing for Non-random Phylogenetic Responses to Urbanisation Using Mass Phylogeny Estimation (MPE)},
