--- a/public/publication/bennett-2017-appraisal/bennett-2017-appraisal.bib
+++ b/public/publication/bennett-2017-appraisal/bennett-2017-appraisal.bib
@@ -1,4 +1,4 @@
-@article{bennett2017appraisal,
+@phdthesis{bennett2017appraisal,
  author = {Bennett, Dominic John},
  publisher = {Imperial College London},
  title = {An appraisal of the ‘Living Fossil’Concept},
