--- a/content/publication/bennett-2018-phylotar/bennett-2018-phylotar.bib
+++ b/content/publication/bennett-2018-phylotar/bennett-2018-phylotar.bib
@@ -1,5 +1,5 @@
 @article{bennett2018phylotar,
- author = {Bennett, Dominic and Hettling, Hannes and Silvestro, Daniele and Zizka, Alexander and Bacon, Christine and Faurby, Søren and Vos, Rutger and Antonelli, Alexandre},
+ author = {Bennett, Dominic J and Hettling, Hannes and Silvestro, Daniele and Zizka, Alexander and Bacon, Christine and Faurby, Søren and Vos, Rutger and Antonelli, Alexandre},
  journal = {Life},
  number = {2},
  pages = {20},
