--- a/content/publication/bennett-2019-roysoc/bennett-2019-roysoc.bib
+++ b/content/publication/bennett-2019-roysoc/bennett-2019-roysoc.bib
@@ -1,4 +1,4 @@
-@article{bennett2019past2,
+@article{bennett2019roysoc,
 author = "Dominic J Bennett",
 title = "{The Past is a Foreign Country: The evolutionary potential of “living fossils”}",
 year = "2019",
