--- a/public/publication/bennett-2019-past/bennett-2019-past.bib
+++ b/public/publication/bennett-2019-past/bennett-2019-past.bib
@@ -1,6 +1,7 @@
 @article{bennett2019past,
  author = {Bennett, Dominic J, Sutton, Mark D, Turvey, Samuel T},
  title = {How the Past Impacts the Future: Modelling the Performance of Evolutionarily Distinct Mammals through Time.},
- year = {Submitted}
+ year = {2019}
 }
 
+**Submitted**
